--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "base64url": "^2.0.0",
+    "bn.js": "^4.11.8",
     "content-type": "^1.0.2",
+    "elliptic": "^6.4.0",
     "google-protobuf": "^3.4.0",
     "pako": "^1.0.5",
     "react": "^15.6.1",
@@ -36,7 +39,7 @@
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/librarian/api/*_pb.js",
