--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.1.1",
     "flow-bin": "^0.54.0",
     "jest-cli": "^20.0.4",
     "node-webcrypto-ossl": "^1.0.30"
