--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "0.9.5",
+    "seedrandom": "^2.4.3",
     "utf-8": "^1.0.0"
   },
   "devDependencies": {
@@ -18,6 +19,8 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.1.1",
+    "eslint-config-google": "^0.9.1",
     "flow-bin": "^0.54.0",
     "jest-cli": "^20.0.4",
     "node-webcrypto-ossl": "^1.0.30"
@@ -34,7 +37,11 @@
       "^.+\\.jsx?$": "babel-jest"
     },
     "collectCoverage": true,
-    "collectCoverageFrom" : ["**/*.{js,jsx}", "!**/librarian/api/**", "!**/coverage/**"],
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/librarian/api/*_pb.js",
+      "!**/coverage/**"
+    ],
     "globals": {
       "window": true
     }
