--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": "google",
+  "env": {
+    "jest": true,
+    "jest/globals": true
+  },
+  "extends": ["google", "plugin:jest/recommended"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -8,6 +12,9 @@
       "jsx": true
     }
   },
+  "plugins": [
+    "jest"
+  ],
   "rules": {
     "strict": 2,
     "switch-colon-spacing": 0
