--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "base64url": "^2.0.0",
+    "bn.js": "^4.11.8",
     "content-type": "^1.0.2",
+    "elliptic": "^6.4.0",
     "google-protobuf": "^3.4.0",
     "pako": "^1.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "0.9.5",
-    "seedrandom": "^2.4.3",
-    "utf-8": "^1.0.0"
+    "seedrandom": "^2.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -21,6 +23,7 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.1.1",
     "eslint-config-google": "^0.9.1",
+    "eslint-plugin-jest": "^21.1.0",
     "flow-bin": "^0.54.0",
     "jest-cli": "^20.0.4",
     "node-webcrypto-ossl": "^1.0.30"
@@ -36,7 +39,7 @@
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     },
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/librarian/api/*_pb.js",
