--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grpc": "^1.6.0",
     "grpc-tools": "^1.6.0",
     "pako": "^1.0.5",
+    "protobufjs": "^6.8.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "0.9.5",
