add publish and ship (#7)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "content-type": "^1.0.2",
     "elliptic": "^6.4.0",
     "google-protobuf": "^3.4.0",
+    "grpc": "^1.6.0",
+    "grpc-tools": "^1.6.0",
     "pako": "^1.0.5",
+    "protobufjs": "^6.8.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "0.9.5",
