--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "protobufjs": "^6.8.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "seedrandom": "^2.4.3"
+    "seedrandom": "^2.4.3",
+    "utf-8": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
