get acceptance tests working

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
       "!**/librarian/api/*_pb.js",
       "!**/coverage/**"
     ],
+    "testPathIgnorePatterns": [
+      "libri/acceptance/.+\\.test\\.js"
+    ],
     "globals": {
       "window": true
     }
