--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grpc-tools": "^1.6.0",
     "jest-cli": "^21.2.1",
     "pako": "^1.0.5",
+    "protobufjs": "^6.8.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "seedrandom": "^2.4.3"
