--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       - image: circleci/node:4
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
@@ -23,4 +24,4 @@ jobs:
           command: make lint
       - run:
           name: test
-          command: make test
+          command: make test acceptance
