add React app; move libri lib next to it

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "protobufjs": "^6.8.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-scripts": "1.0.14",
     "seedrandom": "^2.4.3",
     "utf-8": "^1.0.0"
   },
@@ -22,9 +23,11 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-traverse": "^6.26.0",
     "eslint": "^4.9.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-jest": "^21.2.0",
@@ -35,22 +38,15 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
   "jest": {
-    "transform": {
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "collectCoverage": false,
     "collectCoverageFrom": [
       "**/*.{js,jsx}",
       "!**/librarian/api/*_pb.js",
       "!**/coverage/**"
-    ],
-    "globals": {
-      "window": true
-    }
+    ]
   }
 }
