--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^4.9.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-jest": "^21.2.0",
+    "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.57.3",
     "jest-cli": "^21.2.1",
     "node-webcrypto-ossl": "^1.0.31"
