--- a/package.json
+++ b/package.json
@@ -3,44 +3,72 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "base64url": "^2.0.0",
-    "bn.js": "^4.11.8",
-    "content-type": "^1.0.4",
-    "elliptic": "^6.4.0",
-    "google-protobuf": "^3.4.0",
-    "grpc": "^1.6.6",
-    "grpc-tools": "^1.6.6",
-    "jest-cli": "^21.2.1",
-    "pako": "^1.0.6",
-    "protobufjs": "^6.8.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14",
-    "seedrandom": "^2.4.3",
-    "utf-8": "^1.0.0"
-  },
-  "devDependencies": {
+    "autoprefixer": "7.1.2",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-istanbul": "^4.1.5",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "20.0.3",
+    "babel-loader": "7.1.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "babel-traverse": "^6.26.0",
-    "eslint": "^4.10.0",
+    "babel-preset-react-app": "^3.0.3",
+    "babel-runtime": "6.26.0",
+    "base64url": "^2.0.0",
+    "bn.js": "^4.11.8",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "content-type": "^1.0.4",
+    "css-loader": "0.28.4",
+    "dotenv": "4.0.0",
+    "elliptic": "^6.4.0",
+    "eslint": "4.4.1",
     "eslint-config-google": "^0.9.1",
+    "eslint-config-react-app": "^2.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jest": "^21.2.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
+    "google-protobuf": "^3.4.0",
+    "grpc": "^1.6.6",
+    "grpc-tools": "^1.6.6",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "jest-cli": "^21.2.1",
+    "object-assign": "4.1.1",
+    "pako": "^1.0.6",
+    "path": "^0.12.7",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.6",
+    "promise": "8.0.1",
+    "protobufjs": "^6.8.0",
+    "react": "^16.0.0",
+    "react-dev-utils": "^4.1.0",
+    "react-dom": "^16.0.0",
+    "seedrandom": "^2.4.3",
+    "style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.4",
+    "url-loader": "0.5.9",
+    "utf-8": "^1.0.0",
+    "webpack": "3.5.1",
+    "webpack-dev-server": "2.8.2",
+    "webpack-manifest-plugin": "1.2.1",
+    "whatwg-fetch": "2.0.3"
+  },
+  "devDependencies": {
     "flow-bin": "^0.57.3",
     "jest-cli": "^21.2.1",
     "node-webcrypto-ossl": "^1.0.31"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js --env=jsdom",
     "flow": "flow"
   },
   "jest": {
@@ -48,6 +76,45 @@
       "**/*.{js,jsx}",
       "!**/librarian/api/*_pb.js",
       "!**/coverage/**"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.js?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
+    ],
+    "testEnvironment": "node",
+    "testURL": "http://localhost",
+    "transform": {
+      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
     ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "react-app",
+    "rules": {
+      "no-undef": 0
+    }
   }
 }
